--- a/aula11/ex010.html
+++ b/aula11/ex010.html
@@ -18,10 +18,10 @@
 
     <script>
         function calcular() {
-            var txtv = document.querySelector('input#textvel')
+            var txtv = document.querySelector('input#txtvel')
             var vel = Number(txtv.value)
-            var res = window.document.getElementById('#res')
-            res.innerHTML = `Sua velocidade atual é de ${vel}`
+            var res = window.document.getElementById('res')
+            res.innerHTML = `Sua velocidade atual é de ${vel}Km/h`
         }
     </script>
 </body>
