todos os exercicios
todos os exercicios na pasta

--- a/Curso-completo.html
+++ b/Curso-completo.html
@@ -203,14 +203,128 @@
 </html>
     -->
 
+    <!-- Ex008
+        var vel = 12
+    console.log(`A velocidade do seu carro é ${vel}Km/h`)
+    if (vel > 60) { //Condição simples!
+    console.log(`Você ultrapassou a velocidade permitida. MULTADO!`)
+    }
+    console.log(`Você esta na velocidade permitida!`)
+    console.log(`Dirija usando sempre o cinto de segurança!`)
+    -->
 
+    <!-- Ex009
+        var pais = 'frança';
+    console.log(`Vivendo em ${pais}`);
 
+    function verificarNacionalidade(pais) {
+      if (pais.toLowerCase() === 'brasil') {
+        return 'Você é brasileiro(a)!';
+      } else {
+       return 'Você é estrangeiro(a)!';
+      }
+    }
 
+    var nacionalidade = verificarNacionalidade(pais);
+    console.log(nacionalidade);
 
+    -->
 
+    <!-- Ex010
+        <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DETRAN</title>
+    <style>
+        body {
+            background-color: rgb(204, 204, 204);
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
 
+        h1 {
+            color: #333;
+            text-align: center;
+        }
 
+        input[type="number"] {
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 
+        input[type="button"] {
+            padding: 10px 20px;
+            font-size: 16px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
 
+        input[type="button"]:hover {
+            background-color: #555;
+        }
+
+        #res {
+            margin-top: 20px;
+            font-size: 18px;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>Sistema de multas do Detran</h1>
+    Velocidade do carro: <input type="number" name="txtvel" id="txtvel"> Km/h
+    <input type="button" value="Verificar" onclick="calcular()">
+    <div id="res"></div>
+
+    <script>
+        function calcular() {
+            var txtv = document.querySelector('input#txtvel')
+            var vel = Number(txtv.value)
+            var res = window.document.getElementById('res')
+            res.innerHTML = `Sua velocidade atual é de ${vel} Km/h <br>`
+            if (vel > 60) {
+                res.innerHTML += `Você está MULTADO por excesso de velocidade <br>`
+            }
+            res.innerHTML += `Dirija sempre com o cinto de segurança!`
+        }
+    </script>
+</body>
+</html>
+
+    -->
+
+    <!-- Ex011
+        var idade = 18
+if (idade < 18) {
+    console.log(`Nao pode votar`)
+} else {
+    if (idade < 18 || idade > 65) {
+        console.log('voto opcional')
+    } else {
+        console.log('Voto obrigatorio')
+    }
+}
+    -->
+
+    <!-- Ex012
+        var hora = 19
+console.log(`Agora são exatamente ${hora} horas`)
+if (hora < 12) {
+    console.log('Bom dia!')
+} else if (hora < 18 && hora > 12) {
+    console.log('Boa Tarde!')
+} else {
+    console.log('Boa Noite!')
+}
+    -->
 </body>
 </html>
