exercicios no curso completo
coloquei os exercicios no curso completo

--- a/Curso-completo.html
+++ b/Curso-completo.html
@@ -326,5 +326,20 @@ if (hora < 12) {
     console.log('Boa Noite!')
 }
     -->
+
+    <!-- Modelo.html
+        
+    -->
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
