modelo.html e mudanca nele
remocao do modelo.html e mudanca nele

--- a/aula12ex/Ex014/modelo.html
+++ b/aula12ex/Ex014/modelo.html
@@ -16,7 +16,7 @@
             Aqui vai aparecer a hora:
         </div>
         <div id="foto">
-            
+            <img src="" alt="">
         </div>
     </section>
 
