--- a/aula12ex/Ex014/modelo.html
+++ b/aula12ex/Ex014/modelo.html
@@ -6,17 +6,17 @@
     <title>Hora do Dia!</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do Dia!</h1>
     </header>
 
     <section>
         <div id="msg">
-            Aqui vai aparecer a hora:
+            Aqui vai aparecer a mensagem...
         </div>
         <div id="foto">
-            <img src="" alt="">
+            <img id="imagem" src="" alt="">
         </div>
     </section>
 
