id img no index e no script
adicionando o id img no index e no script

--- a/Aula12ex/Ex015/modelo.html
+++ b/Aula12ex/Ex015/modelo.html
@@ -28,6 +28,7 @@
         </div>
         <div id="res">
             preencha os dados acima para ver o resultado!
+            <img id="foto">
         </div>
     </section>
 
