--- a/Aula14Ex/Ex16/modelo.html
+++ b/Aula14Ex/Ex16/modelo.html
@@ -3,32 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verificador de idade</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Verificador de idade</h1>
+        <h1>Vamos contar...</h1>
     </header>
 
     <section>
-        <div>
-            <p>Ano de nacsimento:
-                <input type="number" name="txtano" id="txtano" min="0">
-            </p>
-            <p>Sexo:
-                <input type="radio" name="radsex" id="masc" checked>
-                <label for="masc">Maculino</label>
-                <input type="radio" name="radsex" id="fem">
-                <label for="fem">Feminino</label>
-            </p>
-            <p>
-                <input type="button" value="Verificar" onclick="verificar()">
-            </p>
+        <div id="dados">
+            <p>Inicio: <input type="number" name="inicio" id="txti"></p>
+            <p>fim: <input type="number" name="fim" id="txtf"></p>
+            <p>passo: <input type="number" name="passo" id="txtp"></p>
+            <p><input type="button" value="Contar" onclick="contar()"></p>
         </div>
         <div id="res">
-            preencha os dados acima para ver o resultado!
-            <img id="foto">
+            Preparando a contagem...
         </div>
     </section>
 
